--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   "categories": [
     "Other"
   ],
+  "capabilities": {
+    "definitionProvider": true
+  },
   "activationEvents": [],
   "main": "./out/extension.js",
   "contributes": {
