--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
   "engines": {
     "vscode": "^1.87.0"
   },
+  "homepage": "https://github.com/Hussa15033/sass-node-imports",
   "author": {
     "name": "Auwais Hussain",
     "url": "https://github.com/hussa15033/"
   },
   "repository": {
-    "url": "https://github.com/Hussa15033/sass-node-imports"
+    "type": "git",
+    "url": "https://github.com/Hussa15033/sass-node-imports.git"
   },
   "categories": [
     "Other"
